<resources>
    <string name="app_name">Mini App</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="login_now">Login Now</string>
    <string name="create_account">Create Account</string>
    <string name="user_details">User Details</string>
    <string name="logout">logout</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="order_your_favourite_food">Order Your Favourite Food</string>
    <string name="choose_food_you_want">Choose Food You Want</string>
    <string name="title_activity_home_drawer">Home_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Menu">Menu</string>
    <string name="Cart">Cart</string>
    <string name="Orders">Orders</string>
    <string name="nav_logout">Logout</string>
    <string name="name_of_item">Name of Item</string>
    <string name="search_here">Search here</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="add_data">ADD DATA</string>
    <string name="delete_data">DELETE DATA</string>
    <string name="delete_records">DELETE RECORDS</string>
    <string name="enter_document_id_to_delete_item">Enter Document Id To Delete Item</string>
    <string name="item1">item1</string>
    <string name="delete">Delete</string>
    <string name="add_menu_item">ADD MENU ITEM</string>
    <string name="delete_menu_item">DELETE MENU ITEM</string>
    <string name="enter_document_id">Enter Document id</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="add">ADD</string>
    <string name="item_url">Item URL</string>
    <string name="enter_new_menu_item_in_database">Enter New Menu Item in Database</string>
    <string name="update_menu_item">UPDATE MENU ITEM</string>
    <string name="enter_new_fields_to_update_menu_item">Enter new Fields to Update Menu Item</string>
    <string name="update">UPDATE</string>
    <string name="update_data">UPDATE DATA</string>
    <string name="view_menu_items">VIEW MENU ITEMS</string>
    <string name="view">VIEW</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="provide_your_location">Provide your location</string>
    <string name="address">Address</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="begums_restaurant">Begums Restaurant</string>
    <string name="view_data">VIEW DATA</string>

</resources>